--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
                 // Animate the name
                 const nameElement = document.getElementById('animatedName');
-nameElement.innerHTML = `<span style="color: '#FF9933'; font-size: 25px;">Happy Republic Day,</span> <span style="color: #008000; font-size: 25px;">${username}</span>!`;
-nameElement.style.width = `${nameElement.scrollWidth}px`;
+                nameElement.innerHTML = `<span style="color: '#FF9933'; font-size: 25px;">Happy Republic Day,</span> <span style="color: #008000; font-size: 25px;">${username}</span>!`;
+                nameElement.style.marginTop = `${5}rem`;
 
             } else {
                 alert('Please enter your name');
