--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <input type="text" id="username" class="input-field" placeholder="Enter your name">
         <button class="btn animate__animated animate__pulse animate__infinite" onclick="showFlag()">Submit</button>
     </div>
-    <div class="greeting" id="greeting">Happy Republic Day, <span id="userName"></span>!</div>
+    <div class="greeting" id="greeting">Happy Republic Day My Dear, <span id="userName" style="color:#008000"></span> !</div>
     <div class="flag-container animate__animated animate__fadeIn" id="flagContainer">
         <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="Indian Flag" class="flag">
         <div class="name" id="animatedName"></div>
